# android-blender-libs

.github/workflows/: build-alembic.yml  build-blosc.yml  build-boost.yml  build-boostlibs.yml  build-brotli.yml  build-bzip2.yml  build-comiso.yml  build-cpython.yml  build-embree.yml  build-epoxy.yml  build-expat.yml  build-ffmpeg.yml  build-fftw.yml  build-freetype.yml  build-gmp.yml  build-harfbuzz.yml  build-icuc.yml  build-imath.yml  build-jpeg.yml  build-lemon.yml  build-libxml2.yml  build-oidn.yml  build-openal.yml  build-openblas.yml  build-opencollada.yml  build-opencolorio.yml  build-openexr.yml  build-openimageio.yml  build-openpgl.yml  build-opensubdiv.yml  build-openvdb.yml  build-png.yml  build-potrace.yml  build-pugixml.yml  build-sdl.yml  build-sqlite.yml  build-tbb.yml  build-tiff.yml  build-yamlcpp.yml  build-zip.yml  (+1 more)
Alembic/include/Alembic/Util/: Config.h
CoMISo/: README.md
Embree/common/cmake/: FindTBB.cmake  package.cmake
Embree/common/tasking/: CMakeLists.txt
Fftw/include/fftw-3.3.10/: CMakeLists.txt
GMP/include/: gmp.h
IMath/cmake/Imath/: ImathTargets-release.cmake  ImathTargets.cmake
JPEG/lib/cmake/libjpeg-turbo/: libjpeg-turboConfig.cmake  libjpeg-turboConfigVersion.cmake
LibXML/include/libxml/: xmlversion.h
OpenBlas/include/: openblas_config.h
OpenCOLLADA/include/OpenCOLLADA-main/: CMakeLists.txt
OpenCOLLADA/include/OpenCOLLADA-main/COLLADABaseUtils/: CMakeLists.txt
OpenCOLLADA/include/OpenCOLLADA-main/COLLADABaseUtils/include/: COLLADABUhash_map.h
OpenCOLLADA/include/OpenCOLLADA-main/COLLADAFramework/: CMakeLists.txt
OpenCOLLADA/include/OpenCOLLADA-main/COLLADAMax/res/: ColladaMax.rc
OpenCOLLADA/include/OpenCOLLADA-main/COLLADAMaya/: BUILD_MAC.TXT  BUILD_WIN.TXT  INSTALL_WIN.TXT  README.TXT
OpenCOLLADA/include/OpenCOLLADA-main/COLLADASaxFrameworkLoader/: CMakeLists.txt
OpenCOLLADA/include/OpenCOLLADA-main/COLLADAValidator/: CMakeLists.txt
OpenCOLLADA/include/OpenCOLLADA-main/DAEValidator/: CMakeLists.txt
OpenCOLLADA/include/OpenCOLLADA-main/GeneratedSaxParser/: CMakeLists.txt
OpenColorIO/include/OpenColorIO/: OpenColorABI.h
OpenExr/lib/cmake/OpenEXR/: OpenEXRTargets-release.cmake  OpenEXRTargets.cmake
OpenImageIO/include/: CMakeLists.txt
OpenImageIO/include/src/cmake/: externalpackages.cmake
OpenImageIO/include/src/ico.imageio/: CMakeLists.txt
OpenImageIO/include/src/jpeg.imageio/: CMakeLists.txt
OpenImageIO/include/src/libOpenImageIO/: CMakeLists.txt
OpenImageIO/include/src/libtexture/: imagecache_pvt.h  texture_pvt.h
OpenImageIO/include/src/libutil/: CMakeLists.txt
OpenImageIO/include/src/png.imageio/: CMakeLists.txt
OpenImageIO/include/src/tiff.imageio/: CMakeLists.txt
OpenImageIO/lib/: libOpenImageIO_Util.so.xz
OpenSubdiv/include/OpenSubdiv-3_4_3/: CMakeLists.txt
OpenSubdiv/include/OpenSubdiv-3_4_3/cmake/: FindOpenGLES.cmake
OpenSubdiv/include/OpenSubdiv-3_4_3/glLoader/: CMakeLists.txt  glLoader.h
OpenSubdiv/include/OpenSubdiv-3_4_3/opensubdiv/: CMakeLists.txt  version.h
OpenVDB/include/openvdb/: CMakeLists.txt  version.h
OpenVDB/include/openvdb/unittest/: CMakeLists.txt
Openpgl/include/openpgl/: defines.h  version.h
Openpgl/include/openpgl-0.7.0/: CMakeLists.txt
Openpgl/include/openpgl-0.7.0/cmake/: FindTBB.cmake
Openpgl/include/openpgl-0.7.0/openpgl/: CMakeLists.txt
Png/include/libpng-1.6.40/: CMakeLists.txt
Potrace/lib/: libpotrace.la
SDL/include/: SDL_config.h  SDL_revision.h
SDL/include/SDL2/: SDL_revision.h
Tbb/include/tbb-master/: CMakeLists.txt
Tbb/lib/cmake/TBB/: TBBConfig.cmake  TBBConfigVersion.cmake
Zstd/pkgconfig/: libzstd.pc
boost/boost_1_71_0/boost/container_hash/: hash.hpp
cpython/include/Include/: pyconfig.h
cpython/include/Include/cpython/: objimpl.h
ffmpeg/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
(+93 files in other folders)
